traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:9: error: ':' expected but ',' found.
  def trianglemoitie1(x,y){
                       ^TraversalDiagonal:22: error: identifier expected but '}' found.
} 
^